<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/are_you_sure_want_to_delete_n_this_note"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/no"
        android:id="@+id/dialogNo"
        android:padding="10dp"
        android:background="@drawable/no_btn"
        android:fontFamily="@font/bold"
        android:layout_marginEnd="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/yes"
        android:id="@+id/dialogYes"
        android:background="@drawable/yes_btn"
        android:padding="10dp"
        android:fontFamily="@font/bold"
        android:layout_marginEnd="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>